--- a/contatti.html
+++ b/contatti.html
@@ -1,5 +1,6 @@
 <!DOCTYPEhtml>
 <html lang="it" dir="ltr">
+ <link rel="stylesheet" href="css/style.css">
  <head>
    <meta charet="utf-8">
    <title>Extrema ratio</title>
