--- a/info.html
+++ b/info.html
@@ -14,7 +14,7 @@
   <a href="https://www.microsoft.com" target="_blank">Microsoft Teams</a></p>
   <p>Per accedere alle riunioni delle conferenze è necessario accedere ai canali, cliccando sull'incontro di interesse</p>
    <ul id="menù">
-     <li><a href="home.html">Home</a></li>
+     <li><a href="index.html">Home</a></li>
      <li><a href="#">Informazioni</a></li>
      <li><a href="contatti.html">Contatti</a></li>
    </ul>
