--- a/contatti.html
+++ b/contatti.html
@@ -11,7 +11,7 @@
    <h3>Incontro <i>onirico</i> con gli autori</h3>
    <p>Benvenuti nel nostro sito web</p>
    <ul id="menù">
-     <li><a href="home.html">Home</a></li>
+     <li><a href="index.html">Home</a></li>
      <li><a href="info.html">Informazioni</a></li>
      <li><a href="#">Contatti</a></li>
    </ul>
